Fix layout bugs

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -266,8 +266,8 @@ button:hover {
 }
 
 
-#user-link:focus,
-#user-link:hover {
+#username:focus,
+#username:hover {
   color: #EBEBEB;
 }
 
